# pgreport

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: tests.yml
pgreport/: cli.py  cls.py  util.py
tests/: 094f64f.json  41981.html  conftest.py  test_cli.py
