[tool.poetry]
name = "pgreport"
version = "0.1.0"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pygit2 = "^1.12.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.scripts]
pgr = 'pgreport.cli:run'

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
